fix title overflow problem

--- a/2018/assets/styles/main.sass
+++ b/2018/assets/styles/main.sass
@@ -1076,29 +1076,29 @@ header
 								padding-right: 60px
 								z-index: 2
 							.program
-								transform: rotate(-90deg) translateY(-79px) translateX(-74px)
+								transform: rotate(-90deg) translateY(-76px) translateX(-70px)
 							.human-resource
-								transform: rotate(-90deg) translateY(-130px) translateX(-126px)
+								transform: rotate(-90deg) translateY(-124px) translateX(-119px)
 							.web-service
-								transform: rotate(-90deg) translateY(-99px) translateX(-94px)
+								transform: rotate(-90deg) translateY(-94px) translateX(-89px)
 							.tech
-								transform: rotate(-90deg) translateY(-51px) translateX(-48px)
+								transform: rotate(-90deg) translateY(-50px) translateX(-45px)
 							.lecture
-								transform: rotate(-90deg) translateY(-74px) translateX(-71px)
+								transform: rotate(-90deg) translateY(-70px) translateX(-67px)
 							.exhibition
-								transform: rotate(-90deg) translateY(-136px) translateX(-133px)
+								transform: rotate(-90deg) translateY(-129px) translateX(-125px)
 							.publicity
-								transform: rotate(-90deg) translateY(-83px) translateX(-79px)
+								transform: rotate(-90deg) translateY(-78px) translateX(-75px)
 							.visual-design
-								transform: rotate(-90deg) translateY(-110px) translateX(-107px)
+								transform: rotate(-90deg) translateY(-105px) translateX(-100px)
 							.sponsorship
-								transform: rotate(-90deg) translateY(-106px) translateX(-102px)
+								transform: rotate(-90deg) translateY(-100px) translateX(-97px)
 							.treasurer
-								transform: rotate(-90deg) translateY(-90px) translateX(-86px)
+								transform: rotate(-90deg) translateY(-86px) translateX(-82px)
 							.film-crew
-								transform: rotate(-90deg) translateY(-85px) translateX(-81px)
+								transform: rotate(-90deg) translateY(-81px) translateX(-77px)
 							.TA
-								transform: rotate(-90deg) translateY(-68px) translateX(-66px)
+								transform: rotate(-90deg) translateY(-70px) translateX(-67px)
 						.need-more-margin-left
 							margin-left: 25px
 						.crew-content-block-right
